@@ -1,3 +1,8 @@
+2008-10-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	Fix up audio only streams by adding a queue after the tee.
+
 2008-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/test/Makefile.am:
